--- a/plugins/processing/classification/box-tutorials/classification-2-incremental.cfg
+++ b/plugins/processing/classification/box-tutorials/classification-2-incremental.cfg
@@ -1,4 +1,4 @@
-<OpenViBE-Classifier-Box FormatVersion="4">
+<OpenViBE-Classifier-Box Creator="OpenVIBE" CreatorVersion="0.0.0" FormatVersion="4">
 	<Strategy-Identifier class-id="(0xffffffff, 0xffffffff)">Native</Strategy-Identifier>
 	<Algorithm-Identifier class-id="(0x2ba17a3c, 0x1bd46d84)">Linear Discrimimant Analysis (LDA)</Algorithm-Identifier>
 	<Stimulations>
@@ -11,16 +11,16 @@
 			<Classes>0 1 2 </Classes>
 			<Class-config-list>
 				<Class-config>
-					<Weights> 1.420580e+002 1.407747e+002 1.515542e+002 1.064545e+002</Weights>
-					<Bias>-3949.05</Bias>
+					<Weights> 1.124088e+02 1.058828e+02 1.109235e+02 1.186372e+02</Weights>
+					<Bias>-3275.72</Bias>
 				</Class-config>
 				<Class-config>
-					<Weights> 1.396979e+002 1.432478e+002 1.514010e+002 1.063725e+002</Weights>
-					<Bias>-3947.23</Bias>
+					<Weights> 1.100177e+02 1.084102e+02 1.109201e+02 1.187636e+02</Weights>
+					<Bias>-3279.49</Bias>
 				</Class-config>
 				<Class-config>
-					<Weights> 1.396863e+002 1.410456e+002 1.539364e+002 1.070348e+002</Weights>
-					<Bias>-3961.82</Bias>
+					<Weights> 1.100573e+02 1.060910e+02 1.136688e+02 1.187484e+02</Weights>
+					<Bias>-3286.05</Bias>
 				</Class-config>
 			</Class-config-list>
 		</LDA>
