--- a/modules/socket/CMakeLists.txt
+++ b/modules/socket/CMakeLists.txt
@@ -64,5 +64,9 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	RUNTIME DESTINATION ${DIST_BINDIR}
 	LIBRARY DESTINATION ${DIST_LIBDIR}
 	ARCHIVE DESTINATION ${DIST_LIBDIR})
+INSTALL(TARGETS ${PROJECT_NAME}-static
+	RUNTIME DESTINATION ${DIST_BINDIR}
+	LIBRARY DESTINATION ${DIST_LIBDIR}
+	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
 INSTALL(DIRECTORY include/ DESTINATION ${DIST_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE)
