--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ PROJECT(OpenVIBE)
 
 SET(OV_GLOBAL_VERSION_MAJOR 0)
 SET(OV_GLOBAL_VERSION_MINOR 0)
-SET(OV_GLOBAL_VERSION_PATCH 5)
+SET(OV_GLOBAL_VERSION_PATCH 6)
 SET(OV_GLOBAL_VERSION_STRING "${OV_GLOBAL_VERSION_MAJOR}.${OV_GLOBAL_VERSION_MINOR}.${OV_GLOBAL_VERSION_PATCH}")
 
 # Default is to build to dist/. If you wish a custom install, set your own MAKE_INSTALL_PREFIX when you call CMake. Safest to do under a fakeroot.
@@ -186,7 +186,7 @@ IF(OV_PACKAGE)
 			OUTPUT_VARIABLE CPACK_SYSTEM_NAME)
 	endif()
 
-	SET(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}-${CMAKE_BUILD_TYPE}")
+	SET(CPACK_PACKAGE_NAME "OpenViBE-${CMAKE_BUILD_TYPE}")
 	INCLUDE(CPack)
 ELSE()
 	SET(DIST_BINDIR ${CMAKE_INSTALL_FULL_BINDIR})
