--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,8 +177,9 @@ IF(OV_PACKAGE)
 	SET(DIST_DOCDIR ${CMAKE_INSTALL_BINDIR}/../doc)
 	SET(CPACK_GENERATOR "ZIP")
 	SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
-	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CertiViBE")
-	SET(CPACK_PACKAGE_VENDOR "Inria & Mensia Technologies")
+	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${BRAND_NAME})
+	SET(VENDOR "Inria & Mensia Technologies")
+	SET(CPACK_PACKAGE_VENDOR ${VENDOR})
 	SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING.md")
 	SET(CPACK_PACKAGE_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
